r572
----
- Fixed bug in PSDeformableBody (springs were not being created, because
  set_mesh() was never called in load_from_xml()) and DeformableCCD (broad
  phase was not updating for deformable bodies) 

r571
----
- Fixed Dan's fixes relating to "q-tare" and initial joint values for q 

r570
----
- Fixed bug for regularized Lemke solver during which (occasionally), a
  solution would be within tolerance for the equilibrated problem but not for
  the original problem 

r560
----
- Fixed some bugs in regularized LCP solver

r559
----
- Removed MatrixNN
- LinAlg::pseudo_inverse() and LinAlg::solve_LS_fast() now more efficient
- Optimization::lcp_lemke_regularized() should now be more robust

r558
----
- Fixed bug in applying impulses to rigid bodies (RigidBody::update_velocity())

r557
----
- Fixed bugs in BlockIterator
- Updated LinAlg to give correct Q and R matrices from QR factorization
- Updated LinAlg to implement QR factorization updates (not working)
- Matrix multiplication mechanics now changed to be more abstract (underlying
  arithmetic still done via BLAS)
- Added triangular solve to CBLAS
- Active-set QP solver now faster

r556
----
- Significant updates to optimization code
- Added iterators for block matrix code

r555
----
- Fixed bug in computing real event times

r554
----
- Added "true" time to events for proper processing

r553
----
- Fixed issues with Zeno points and simplified Zeno point handling mechanism

r552
----
- Altered Zeno point handling mechanism and removed semi-implicit integration
- Fixed Runge-Kutta-Fehlberg integrator

r551
----
- Bugfixes to the bugfixes to the previous bugfix (should now be working)

r550
----
- Bugfixes to the previous bugfix (still broken)

r549
----
- Major bugfix: event checking should now work properly independent of
  integrator type

r548
----
- Geometric primitives no longer report intersection if a point is
  interpenetrating (but on its way out of the primitive)

r547
----